--- a/package.json
+++ b/package.json
@@ -6,23 +6,24 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "*",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "eslint": "^4.18.2",
     "express": "~4.15.5",
+    "express-flash": "0.0.2",
     "express-handlebars": "*",
     "express-messages": "*",
-    "express-session": "*",
-    "express-validator": "*",
+    "express-session": "^1.15.6",
+    "express-validator": "^5.1.2",
     "hbs": "~4.0.1",
-    "morgan": "~1.9.0",
-    "serve-favicon": "~2.4.5",
-    "bcryptjs": "*",
     "mongodb": "*",
     "mongoose": "*",
+    "morgan": "~1.9.0",
     "passport": "*",
     "passport-http": "*",
-    "passport-local": "*"
+    "passport-local": "*",
+    "serve-favicon": "~2.4.5"
   }
 }
