--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongodb": "*",
     "mongoose": "*",
     "morgan": "~1.9.0",
+    "npm": "^5.8.0",
     "passport": "*",
     "passport-http": "*",
     "passport-local": "*",
