--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bcryptjs": "*",
     "body-parser": "~1.18.2",
+    "chart.js": "^2.7.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "eslint": "^4.18.2",
