--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^2.6.0",
     "bcryptjs": "*",
     "body-parser": "~1.18.2",
-    "chart.js": "^2.7.2",
     "cookie-parser": "~1.4.3",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "eslint": "^4.18.2",
     "express": "~4.15.5",
@@ -22,6 +23,7 @@
     "mongodb": "*",
     "mongoose": "*",
     "morgan": "~1.9.0",
+    "nodemailer": "^4.6.4",
     "npm": "^5.8.0",
     "passport": "*",
     "passport-http": "*",
