--- a/package.json
+++ b/package.json
@@ -6,25 +6,25 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "async": "^2.6.0",
+    "async": "^2.6.1",
     "bcryptjs": "*",
-    "body-parser": "~1.18.2",
+    "body-parser": "^1.18.3",
     "chart.js": "^2.7.2",
     "cookie-parser": "~1.4.3",
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
-    "eslint": "^4.18.2",
+    "eslint": "^4.19.1",
     "express": "~4.15.5",
     "express-flash": "0.0.2",
     "express-handlebars": "*",
     "express-messages": "*",
     "express-session": "^1.15.6",
-    "express-validator": "^5.1.2",
+    "express-validator": "^5.2.0",
     "hbs": "~4.0.1",
-    "mongodb": "*",
-    "mongoose": "*",
+    "mongodb": "^3.0.10",
+    "mongoose": "^5.1.3",
     "morgan": "~1.9.0",
-    "nodemailer": "^4.6.4",
+    "nodemailer": "^4.6.5",
     "npm": "^5.10.0",
     "passport": "*",
     "passport-http": "*",
