node module vergeten + alles is uitgelijnt
tot morgen voor wie dit leest XD

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "passport": "*",
     "passport-http": "*",
     "passport-local": "*",
+    "randomstring": "^1.1.5",
     "serve-favicon": "~2.4.5"
   }
 }
